# ceno-recursion-verifier

./: .gitignore  Cargo.toml  README.md  circuit_vks_fixed_commits.json  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  lint.yml
scripts/: e2e_test.sh
src/: lib.rs  sumcheck.rs  whir.rs
src/arithmetics/: mod.rs
src/basefold/: binding.rs  mod.rs
src/basefold_verifier/: basefold.rs  binding.rs  commit.rs  domain.rs  extension_mmcs.rs  field.rs  hash.rs  mmcs.rs  mod.rs  outer_poseidon2.rs  program.rs  query_phase.rs  rs.rs  structs.rs  two_adic_pcs.rs  types.rs  utils.rs  verifier.rs
src/constants/: mod.rs
src/e2e/: mod.rs
src/extensions/: mod.rs
src/json/: constants.rs  mod.rs  parser.rs
src/tests/: mod.rs
src/tower_verifier/: binding.rs  mod.rs  program.rs  transcript.rs
src/transcript/: mod.rs
src/zkvm_verifier/: binding.rs  mod.rs  verifier.rs
