[package]
name = "ceno-recursion-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
openvm = { git = "https://github.com/scroll-tech/openvm.git", branch = "feat/native_multi_observe", default-features = false }
openvm-circuit = { git = "https://github.com/scroll-tech/openvm.git", branch = "feat/native_multi_observe", default-features = false, features = ["bench-metrics"] }
openvm-native-circuit = { git = "https://github.com/scroll-tech/openvm.git", branch = "feat/native_multi_observe", default-features = false }
openvm-native-compiler = { git = "https://github.com/scroll-tech/openvm.git", branch = "feat/native_multi_observe", default-features = false }
openvm-native-compiler-derive = { git = "https://github.com/scroll-tech/openvm.git", branch = "feat/native_multi_observe", default-features = false }
openvm-native-recursion = { git = "https://github.com/scroll-tech/openvm.git", branch = "feat/native_multi_observe", default-features = false }

openvm-stark-backend = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.0.0", default-features = false }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.0.0", default-features = false }

rand = { version = "0.8.5", default-features = false }
itertools = { version = "0.13.0", default-features = false }
bincode = "1"
tracing = "0.1.40"

# Plonky3
p3-air = { git = "https://github.com/Plonky3/Plonky3.git", rev = "1ba4e5c" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git", rev = "1ba4e5c" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "1ba4e5c" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3.git", rev = "1ba4e5c" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git", rev = "1ba4e5c" }
p3-util = { git = "https://github.com/Plonky3/Plonky3.git", rev = "1ba4e5c" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git", rev = "1ba4e5c" }
p3-monty-31 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "1ba4e5c" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", rev = "1ba4e5c" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3.git", rev = "1ba4e5c" }
p3-goldilocks = { git = "https://github.com/Plonky3/plonky3", rev = "1ba4e5c" }

# WHIR
ark-std = { version = "0.5", features = ["std"] }
ark-ff = { version = "0.5", features = ["asm", "std"] }
ark-poly = "0.5"
ark-serialize = "0.5"

# Ceno
ceno_mle = { git = "https://github.com/scroll-tech/ceno.git", branch = "feat/simplify_basefold_verifier", package = "multilinear_extensions" }
ceno_sumcheck = { git = "https://github.com/scroll-tech/ceno.git", branch = "feat/simplify_basefold_verifier", package = "sumcheck" }
ceno_transcript = { git = "https://github.com/scroll-tech/ceno.git", branch = "feat/simplify_basefold_verifier", package = "transcript" }
ceno_witness = { git = "https://github.com/scroll-tech/ceno.git", branch = "feat/simplify_basefold_verifier", package = "witness" }
ceno_zkvm = { git = "https://github.com/scroll-tech/ceno.git", branch = "feat/simplify_basefold_verifier" }
ceno_emul = { git = "https://github.com/scroll-tech/ceno.git", branch = "feat/simplify_basefold_verifier" }
mpcs = { git = "https://github.com/scroll-tech/ceno.git", branch = "feat/simplify_basefold_verifier" }
ff_ext = { git = "https://github.com/scroll-tech/ceno.git", branch = "feat/simplify_basefold_verifier" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
bench-metrics = ["openvm-circuit/bench-metrics"]

[patch."https://github.com/scroll-tech/ceno.git"]
ceno_mle = { path = "../ceno/multilinear_extensions", package = "multilinear_extensions" }
ceno_sumcheck = { path = "../ceno/sumcheck", package = "sumcheck" }
ceno_transcript = { path = "../ceno/transcript", package = "transcript" }
ceno_witness = { path = "../ceno/witness", package = "witness" }
ceno_zkvm = { path = "../ceno/ceno_zkvm" }
ceno_emul = { path = "../ceno/ceno_emul" }
mpcs = { path = "../ceno/mpcs" }
ff_ext = { path = "../ceno/ff_ext" }
